feat: add focus mode for prefecture input and enhance team input handling

--- a/tools/match-input-helper/index.html
+++ b/tools/match-input-helper/index.html
@@ -13,6 +13,10 @@
     <div>
         <label>出力ID（共通）：<input type="number" id="outputIdInput" min="1" value="1" /></label>
     </div>
+    <label>
+        <input type="checkbox" id="focusPrefectureMode" />
+        チーム入力後は「都道府県(prefecture)」にフォーカスする
+    </label>
 
     <div id="playersContainer"></div>
 
