feat: add overwrite option for existing player IDs in JSON generation tool

--- a/tools/match-input-helper/index.html
+++ b/tools/match-input-helper/index.html
@@ -36,6 +36,11 @@
 
     <button id="copyBtn" type="button">JSONをコピーする</button>
 
+    <label>
+        <input type="checkbox" id="overwriteMode" />
+        既存の同じ ID がある場合は上書きする
+    </label>
+
     <datalist id="playerList"></datalist>
 
     <script src="teamData.js"></script>
