--- a/tools/roundrobin/index.html
+++ b/tools/roundrobin/index.html
@@ -20,7 +20,7 @@
     <textarea id="jsonOutput"></textarea>
     <script src="initialPlayer.js"></script>
     <script>
-        const initScore = 3; // 初期スコア
+        const initScore = 4; // 初期スコア
 
         const byePlayer = { id: "bye", name: "パッキン", information: [] };
         const allGroupMatches = {};
@@ -249,64 +249,108 @@
             }
 
             // ---- standings はそのままでOK（nameとidがあれば動く）----
+            // ---- standings 修正版 ----
             output.standings = {};
 
             for (const group in initialPlayersByGroup) {
-                const standings = [];
+            const players = initialPlayersByGroup[group].filter(p => p.id !== "bye");
+            const playerStats = {};
 
-                // 初期化
-                const playerStats = {};
-                for (const player of initialPlayersByGroup[group]) {
-                    if (player.id === "bye") continue;
-                    playerStats[player.id] = {
-                        id: player.id,
-                        name: player.name,
-                        wins: 0,
-                        losses: 0,
-                        points: 0,
-                        scoreDiff: 0,
-                    };
-                }
-
-                // 試合結果の集計
-                for (const match of allGroupMatches[group]) {
-                    const p1 = match.p1;
-                    const p2 = match.p2;
-                    const s1 = match.scores.p1;
-                    const s2 = match.scores.p2;
-
-                    if (p1.id === "bye" || p2.id === "bye") continue;
-                    if (match.winner === null) continue;
-
-                    if (!playerStats[p1.id] || !playerStats[p2.id]) continue;
-
-                    playerStats[p1.id].scoreDiff += s1 - s2;
-                    playerStats[p2.id].scoreDiff += s2 - s1;
-
-                    if (match.winner === p1.id) {
-                        playerStats[p1.id].wins += 1;
-                        playerStats[p2.id].losses += 1;
-                    } else if (match.winner === p2.id) {
-                        playerStats[p2.id].wins += 1;
-                        playerStats[p1.id].losses += 1;
-                    }
-                }
-
-                // 勝ち点・勝率でソートし順位を決定
-                const sorted = Object.values(playerStats).sort((a, b) => {
-                    const winRateA = a.wins / (a.wins + a.losses || 1);
-                    const winRateB = b.wins / (b.wins + b.losses || 1);
-                    if (winRateB !== winRateA) return winRateB - winRateA;
-                    return b.scoreDiff - a.scoreDiff;
-                });
-
-                sorted.forEach((s, index) => {
-                    s.rank = index + 1;
-                    standings.push(s);
-                });
-
-                output.standings[group] = standings;
+            // 初期化
+            for (const p of players) {
+                playerStats[p.id] = {
+                    id: p.id,
+                    name: p.name,
+                    wins: 0,
+                    losses: 0,
+                    scoreDiff: 0,
+                    totalPointsFor: 0,
+                    totalPointsAgainst: 0,
+                };
             }
+
+            // 全試合集計
+            for (const match of allGroupMatches[group]) {
+                const { p1, p2, scores, winner } = match;
+                if (!winner || p1.id === "bye" || p2.id === "bye") continue;
+                const s1 = scores.p1, s2 = scores.p2;
+
+                playerStats[p1.id].scoreDiff += s1 - s2;
+                playerStats[p2.id].scoreDiff += s2 - s1;
+                playerStats[p1.id].totalPointsFor += s1;
+                playerStats[p1.id].totalPointsAgainst += s2;
+                playerStats[p2.id].totalPointsFor += s2;
+                playerStats[p2.id].totalPointsAgainst += s1;
+
+                if (winner === p1.id) {
+                    playerStats[p1.id].wins++;
+                    playerStats[p2.id].losses++;
+                } else {
+                    playerStats[p2.id].wins++;
+                    playerStats[p1.id].losses++;
+                }
+            }
+
+            // 同率時に使う「当該者間」比較関数
+            function compareHeadToHead(ids) {
+                const subStats = {};
+                ids.forEach(id => {
+                    subStats[id] = { id, wins: 0, diff: 0 };
+                });
+
+                // 当該者間だけ再集計
+                for (const match of allGroupMatches[group]) {
+                    const { p1, p2, scores, winner } = match;
+                    if (!winner) continue;
+                    if (!ids.includes(p1.id) || !ids.includes(p2.id)) continue;
+
+                    const s1 = scores.p1, s2 = scores.p2;
+                    subStats[p1.id].diff += s1 - s2;
+                    subStats[p2.id].diff += s2 - s1;
+
+                    if (winner === p1.id) subStats[p1.id].wins++;
+                    else subStats[p2.id].wins++;
+                }
+
+                return subStats;
+            }
+
+            // ソート
+            let sorted = Object.values(playerStats);
+
+            sorted.sort((a, b) => {
+                // まず勝数
+                if (b.wins !== a.wins) return b.wins - a.wins;
+
+                // 同率チーム群の当該者間比較
+                const tied = sorted.filter(s => s.wins === a.wins);
+                if (tied.length > 1) {
+                const headToHead = compareHeadToHead(tied.map(s => s.id));
+                const diffA = headToHead[a.id]?.wins ?? 0;
+                const diffB = headToHead[b.id]?.wins ?? 0;
+                if (diffB !== diffA) return diffB - diffA;
+
+                // 当該者間の得失差
+                const subA = headToHead[a.id]?.diff ?? 0;
+                const subB = headToHead[b.id]?.diff ?? 0;
+                if (subB !== subA) return subB - subA;
+                }
+
+                // まだ同じなら全試合の得失差
+                if (b.scoreDiff !== a.scoreDiff) return b.scoreDiff - a.scoreDiff;
+
+                // 同点なら総得点で
+                if (b.totalPointsFor !== a.totalPointsFor)
+                return b.totalPointsFor - a.totalPointsFor;
+
+                return 0; // 完全同点（抽選扱い）
+            });
+
+            // 順位付け
+            sorted.forEach((s, i) => (s.rank = i + 1));
+            output.standings[group] = sorted;
+            }
+
             document.getElementById("jsonOutput").value = JSON.stringify(output, null, 2);
         }
 
